# EyeCare-System

./: .gitignore  README.md  RENDER_SETUP.md  render.yaml
app3/: .gitignore  (+24 more)
eyecare_admin/: .coveragerc  .env.example  .env.production.example  .env.production.template  .flake8  .gitignore  .pylintrc  API_DOCUMENTATION.md  BACKUP_DATABASE.bat  BACKUP_SETUP.md  CLEANUP_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ERRORS_FIXED.md  FILE_CLEANUP_ANALYSIS.md  FINAL_TEST_RESULTS.md  PERFORMANCE.md  PHASE5A_COMPLETE.md  PHASE_4_5_PLAN.md  PRIORITY1_COMPLETE.md  PRIORITY_3_COMPLETE.md  PRIORITY_3_QUICK_GUIDE.md  QUICKSTART.md  README.md  RISK_SCORE_FORMULA.md  RUN_QUALITY_CHECKS.bat  RUN_TESTS.bat  SECURITY.md  START_ADMIN.bat  SYSTEM_ANALYSIS.md  TESTING_GUIDE.md  add_must_change_password_column.py  api_docs.py  app.py  check_admin_login.py  cleanup_files.py  cleanup_old_metrics.py  config.py  (+29 more)
eyecare_admin/ml/: eyecare_model.pkl  preprocess.py  retrain.py
eyecare_admin/models/: eyecare_lightgbm_model.pkl  risk_model.joblib
eyecare_admin/routes/: admin_routes.py  approvals.py  assessments.py  auth.py  healthtips.py  logs.py  ml_routes.py  notifications.py  reports.py  users.py
eyecare_admin/schemas/: __init__.py
eyecare_admin/scripts/: backup_database.py
eyecare_admin/templates/: admin.html  approvals.html  assessments.html  change_password.html  dashboard.html  forgot_password.html  healthtips.html  login.html  logs.html  ml_analytics.html  my_requests.html  reset_password.html  settings.html  users.html
(+118 files in other folders)
